--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -72,11 +72,12 @@
    \hline
    \textbf{Date} & \textbf{Revision} & \textbf{Comments} & \textbf{Author(s)} \\ \hline
    Dec 29, 2017 & 1.0 & Structure made for document including headings & Christopher McDonald \\ \hline
-   Jan 11, 2018 & 1.1 & Added content for ShotRecommendation and SmartServe systems, and Communication Protocols Sections & Christopher McDonald \\
+   Jan 11, 2018 & 1.1 & Added content for ShotRecommendation and SmartServe systems, and Communication Protocols Sections & Christopher McDonald \\ \hline
    Jan 11, 2018 & 1.2 & Added content for Document Overview & Christopher McDonald \\ \hline
    Jan 12, 2018 & 1.3 & Added Data Storage and User Interface modules & Sharon Platkin \\ \hline
    Jan 13, 2018 & 1.4 & Added details for Shooting Mech, CV, Shot Optimizer, Shooting Model subsystems & Harit Patel \& Sam Hamel \\ \hline
    Jan 15, 2018 & 1.5 & Edited Module Guide & Sharon Platkin \\ \hline
+   Jan 16, 2018 & 1.6 & Edited Document, refined and defragged definitions & Sharon Platkin \& Christopher McDonald \\ \hline
 
    \end{tabularx}
    \caption{Revision History}
