fixed rev history, YET AGAIN

--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -76,7 +76,7 @@
    Jan 11, 2018 & 1.2 & Added content for Document Overview & Christopher McDonald \\ \hline
    Jan 12, 2018 & 1.3 & Added Data Storage and User Interface modules & Sharon Platkin \\ \hline
    Jan 13, 2018 & 1.4 & Added details for Shooting Mech, CV, Shot Optimizer, Shooting Model subsystems & Harit Patel \& Sam Hamel \\ \hline
-   Jan 15, 2018 & 1.5 & Edited Module Guide & Sharon Platkin \\ \hline
+   Jan 15, 2018 & 1.5 & Edited Module Guide, Added Detailed Class Diagram & Sharon Platkin \\ \hline
    Jan 16, 2018 & 1.6 & Edited Document, refined and defragged definitions & Sharon Platkin \& Christopher McDonald \\ \hline
 
    \end{tabularx}
