--- a/documentation/ComponentDesign/ComponentDesign.tex
+++ b/documentation/ComponentDesign/ComponentDesign.tex
@@ -19,7 +19,7 @@
 	\textsc{\large Software \& Mechatronics Capstone}\\[0.5cm] 
 
 	\HRule\\[0.4cm]
-		{\huge\bfseries Document Title}\\[0.4cm]
+		{\huge\bfseries Component Design}\\[0.4cm]
 	\HRule\\[0.4cm]
 	
 	\begin{minipage}[t][][t]{0.5\textwidth}
